<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.preface.SliderFragment">

    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_2.5x"
        android:layout_marginEnd="@dimen/dp_2x"
        android:text="@string/Skip"
        android:textColor="@color/purple_B06DB5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_slider"
        android:layout_width="0dp"
        android:layout_height="@dimen/slider_size"
        android:layout_marginBottom="@dimen/dp_4x"
        app:layout_constraintBottom_toBottomOf="@id/indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_slider_desc"
        style="@style/Header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_4x"
        android:text="@string/slider_desc_1"
        app:layout_constraintBottom_toTopOf="@id/indicator"
        app:layout_constraintEnd_toEndOf="@id/btn_next"
        app:layout_constraintStart_toStartOf="@id/btn_next" />

    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
        android:id="@+id/indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_3x"
        android:elevation="1dp"
        app:dotsColor="@color/purple_4DB06DB5"
        app:dotsSize="8dp"
        app:dotsSpacing="4dp"
        app:layout_constraintBottom_toTopOf="@id/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:selectedDotColor="@color/purple_B06DB5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        style="@style/CustomButton.Purple"
        android:layout_width="0dp"
        android:layout_marginHorizontal="52dp"
        android:layout_marginBottom="@dimen/dp_3.25x"
        android:text="@string/Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>